fixed tex-align

--- a/app/styles/utils/_brand-helpers.scss
+++ b/app/styles/utils/_brand-helpers.scss
@@ -27,6 +27,8 @@ $size-list: (
 	'xxl' : $ms-xxl
 );
 
+$size-list-hardcoded: (8, 20, 40);
+
 $directions: (
 	'l': 'left',
 	't': 'top',
@@ -55,6 +57,23 @@ $property: (
 		}
 	}
 }
+
+@each $property-short, $property-full in $property {
+	@each $direction-short, $direction-full in $directions {
+		@each $i in $size-list-hardcoded {
+			.#{$property-short}#{$direction-short}-#{$i} {#{$property-full}-#{$direction-full}: #{$i}px}
+		}
+	}
+}
+
+
+// @each $direction-short, $direction-full in $directions {
+// 	.m#{$direction-short}-20 {margin-#{$direction-full}: 20px}
+// }
+//
+// @each $direction-short, $direction-full in $directions {
+// 	.m#{$direction-short}-20 {margin-#{$direction-full}: 20px}
+// }
 
 .m-auto {margin: auto;}
 	.m-l-auto  { margin-left: auto; }
@@ -103,26 +122,24 @@ $property: (
 		border-style: solid;
 	}
 	.border-style-sm {
-		border-width: $ms-xs;
-		border-style: solid;
-	}
-	.border-style-md {
 		border-width: $ms-sm;
 		border-style: solid;
 	}
-	.border-style-lg {
+	.border-style-md {
 		border-width: $ms-md;
 		border-style: solid;
 	}
+	.border-style-lg {
+		border-width: $ms-lg;
+		border-style: solid;
+	}
 
-$brand-colors: (
-	'neutral': $color-neutral,
-	'stable': $color-stable,
-	'dark': $color-dark,
-	'pri': $color-pri,
-	'sec': $color-sec,
-	'ter': $color-ter
-);
+.border-radius--xs {
+
+}
+	.border-radius--sm {
+		border-radius: 5px;
+	}
 
 @each $brand-alias, $brand-color in $brand-colors {
 	.border--#{$brand-alias} {
@@ -171,15 +188,15 @@ $brand-colors: (
 /* Media Query Based Alignmenmt */
 
 $alignments-tb: (
-  't': 'top',
-  'm': 'middle',
-  'b': 'bottom'
+  't': top,
+  'm': middle,
+  'b': bottom
 );
 
 $alignments-lr: (
-	'l': 'left',
-	'c': 'center',
-	'r': 'right'
+	'l': left,
+	'c': center,
+	'r': right
 );
 
 @each $align-alias, $align in $alignments-tb {
@@ -190,47 +207,37 @@ $alignments-lr: (
 	.text-#{$align-alias} {text-align: $align}
 }
 
+
+
 @media ( min-width: $screen-sm-min ) {
     // .text-top--sm    { vertical-align: top}
-    // .text-middle--sm { vertical-align: middle}
-    // .text-bottom--sm { vertical-align: bottom}
+	@each $align-alias, $align in $alignments-tb {
+		.text-#{$align-alias}--sm {vertical-align: $align}
+	}
     // .text-left--sm   { text-align: left}
-    // .text-center--sm { text-align: center}
-    // .text-right--sm  { text-align: right}
-		@each $align-alias, $align in $alignments-tb {
-			.text-#{$align-alias}--sm {vertical-align: $align}
-		}
-		@each $align-alias, $align in $alignments-lr {
-			.text-#{$align-alias}--sm {text-align: $align}
-		}
+	@each $align-alias, $align in $alignments-lr {
+		.text-#{$align-alias}--sm {text-align: $align}
+	}
 }
 
 @media ( min-width: $screen-md-min ) {
     // .text-top--md    { vertical-align: top}
-    // .text-middle--md { vertical-align: middle}
-    // .text-bottom--md { vertical-align: bottom}
+	@each $align-alias, $align in $alignments-tb {
+		.text-#{$align-alias}--md {vertical-align: $align}
+	}
     // .text-left--md   { text-align: left}
-    // .text-center--md { text-align: center}
-    // .text-right--md  { text-align: right}
-		@each $align-alias, $align in $alignments-tb {
-			.text-#{$align-alias}--md {vertical-align: $align}
-		}
-		@each $align-alias, $align in $alignments-lr {
-			.text-#{$align-alias}--md {text-align: $align}
-		}
+	@each $align-alias, $align in $alignments-lr {
+		.text-#{$align-alias}--md {text-align: $align}
+	}
 }
 
 @media ( min-width: $screen-lg-min ) {
     // .text-top--lg    { vertical-align: top}
-    // .text-middle--lg { vertical-align: middle}
-    // .text-bottom--lg { vertical-align: bottom}
+	@each $align-alias, $align in $alignments-tb {
+		.text-#{$align-alias}--lg {vertical-align: $align}
+	}
     // .text-left--lg   { text-align: left}
-    // .text-center--lg { text-align: center}
-    // .text-right--lg  { text-align: right}
-		@each $align-alias, $align in $alignments-tb {
-			.text-#{$align-alias}--lg {vertical-align: $align}
-		}
-		@each $align-alias, $align in $alignments-lr {
-			.text-#{$align-alias}--lg {text-align: $align}
-		}
+	@each $align-alias, $align in $alignments-lr {
+		.text-#{$align-alias}--lg {text-align: $align}
+	}
 }
